Closed
Bug 101355
Opened 24 years ago
Closed 24 years ago
HP-UX bustage: nsGopherChannel.cpp needs newline
Categories
(SeaMonkey :: General, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: shannond, Assigned: shannond)
References
Details
(Whiteboard: PDT+)
netwerk/protocol/gopher/src/nsGopherChannel.cpp needs newline to fix HP-UX
bustage. This bustage is seen on the commercial tinderbox however the bustage
is in mozilla.
Index: nsGopherChannel.cpp
===================================================================
RCS file: /cvsroot/mozilla/netwerk/protocol/gopher/src/nsGopherChannel.cpp,v
retrieving revision 1.12.14.1
diff -u -r1.12.14.1 nsGopherChannel.cpp
--- nsGopherChannel.cpp 2001/09/21 23:06:35 1.12.14.1
+++ nsGopherChannel.cpp 2001/09/24 16:20:34
@@ -632,4 +632,5 @@
0, mRequest.Length(), 0,
this, nsnull);
return rv;
-}
\ No newline at end of file
+}
+
Asking for required reviews and PDT approval to check in this newline and fix HP-UX
Actual Results:
Expected Results:
| Assignee | ||
Comment 1•24 years ago
|
||
This is in the 0.9.4 branch
Got r=jdunn@netscape.com by aim
Comment 3•24 years ago
|
||
oops. r=bbaetz - cls fixed this in r1.15 on the trunk after darin checked in my
patch for bug 89500 for me on the trunk.
I blame msvc++'s editor, since that file ended up with no other changes....
| Assignee | ||
Comment 5•24 years ago
|
||
checked into branch
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•