Fixing HP-UX bustage by adding a newline. Bug 101355, r=jdunn,bbaetz a=pdt