mozilla/netwerk/protocol/gopher/src/nsGopherChannel.cpp
@@ -633,3 +633,4 @@ nsGopherChannel::SendRequest(nsITransport* aTransport)
                                  this, nsnull);
     return rv;
 }
+
